--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>ODIN v1.5 - A Simple Creative One Page Responsive HTML5 Template by Designova</title>
+<title>Boston 3-1-1</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="ODIN by Designova - Responsive HTML5 template">
 <meta name="author" content="Designova">
 
-<!-- Standard Favicon-->
+<!-- Standard Favicon--> 
 <link rel="shortcut icon" href="images/favicon/favicon.ico">
 
 
@@ -45,33 +45,51 @@
 
   <!-- Preloader
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div id="preloader">
-    <div id="status"></div>
+  <div id="preloader"> 
+    <div id="status"></div> 
   </div>
 
-
-<!-- Master Wrap : starts -->
 <section id="mastwrap">
 
+ 
 
 
-<section id="intro" class="intro trans-white">
+<section id="intro" class="intro silver-bg">
 
 
-			<div class="item  image-carousel-item agency-carousel-item-03  text-center full-height">
-				<div class="trans-white hero-caps  full-height">
-					<div class="valign">
-						<div class="item stats-carousel-item hero-caps  text-center">
-							<h6 class="minimal dark"><span>3-1-1  Boston</span></h6>
-						</div>
-						<!-- item:ends -->
-					</div>
-				</div>
-			</div>
+	<div class="valign">
 
+		<div id="intro-carousel" class="intro-carousel owl-carousel  owl-nav-sticky-wide">
+
+							<div class="item stats-carousel-item hero-caps  text-center">
+								<h1 class="dark">3-1-1</h1>
+								<h6 class="dark" color="red">BOSTON</h6>
+							</div>
+							<!-- item:ends -->
+
+
+
+							<div class="item stats-carousel-item  text-center hero-caps  intro-mock">
+								<h2 class="dark">HAVING A NON-EMERGENCY?</h2>
+								<h2 class="dark"><span>BOSTON 3-1-1 LISTENS</span></h2>
+							</div>
+							<!-- item:ends -->
+
+
+		</div>
+		<!-- carousel:ends -->
+
+
+	</div>
+	<!-- valign:ends -->
+
+	<a  class="scroll" href="#about" >
+		<div class="mouse-icon white hidden-xs" style="opacity: 1;">
+		            <div class="wheel"></div>
+		 </div>
+	</a>
 
 </section>
-
 
 
 
@@ -82,7 +100,7 @@
 
 <div class="container">
 
-			<div class="item about-carousel-item">
+						<div class="item about-carousel-item">
 				<div class="row">
 					<article class="col-md-8 col-md-offset-2 main-caps text-center">
 						<h3 class="grey">WHAT IS 3-1-1 ?</h3>
@@ -93,67 +111,7 @@
 			</div>
 			<br>
 			<br>
-
-<!-- inner-section : starts -->
-	<section id="thumb-carousel-wrap" class="inner-section thumb-carousel-wrap">
-
-        	<!-- thumb-carousel : starts -->
-        	<div id="thumb-carousel" class="owl-carousel">
-
-	          <div class="item">
-	          	<a  class="venobox" data-gall="thumb-gallery"  href="http://placehold.it/700x700">
-	          		<img data-no-retina alt="odin" title="odin" class="img-responsive" src="http://placehold.it/700x700"/>
-	          		<div class="thumb-title"><h5><span>title here</span></h5></div>
-	          	</a>
-	          </div>
-	           <div class="item">
-	          	<a  class="venobox" data-gall="thumb-gallery"  href="http://placehold.it/700x700">
-	          		<img data-no-retina alt="odin" title="odin" class="img-responsive" src="http://placehold.it/700x700"/>
-	          		<div class="thumb-title"><h5><span>title here</span></h5></div>
-	          	</a>
-	          </div>
-	           <div class="item">
-	          	<a  class="venobox" data-gall="thumb-gallery"  href="http://placehold.it/700x700">
-	          		<img data-no-retina alt="odin" title="odin" class="img-responsive" src="http://placehold.it/700x700"/>
-	          		<div class="thumb-title"><h5><span>title here</span></h5></div>
-	          	</a>
-	          </div>
-	           <div class="item">
-	          	<a  class="venobox" data-gall="thumb-gallery"  href="http://placehold.it/700x700">
-	          		<img data-no-retina alt="odin" title="odin" class="img-responsive" src="http://placehold.it/700x700"/>
-	          		<div class="thumb-title"><h5><span>title here</span></h5></div>
-	          	</a>
-	          </div>
-	           <div class="item">
-	          	<a  class="venobox" data-gall="thumb-gallery"  href="http://placehold.it/700x700">
-	          		<img data-no-retina alt="odin" title="odin" class="img-responsive" src="http://placehold.it/700x700"/>
-	          		<div class="thumb-title"><h5><span>title here</span></h5></div>
-	          	</a>
-	          </div>
-	           <div class="item">
-	          	<a  class="venobox" data-gall="thumb-gallery"  href="http://placehold.it/700x700">
-	          		<img data-no-retina alt="odin" title="odin" class="img-responsive" src="http://placehold.it/700x700"/>
-	          		<div class="thumb-title"><h5><span>title here</span></h5></div>
-	          	</a>
-	          </div>
-	           <div class="item">
-	          	<a  class="venobox" data-gall="thumb-gallery"  href="http://placehold.it/700x700">
-	          		<img data-no-retina alt="odin" title="odin" class="img-responsive" src="http://placehold.it/700x700"/>
-	          		<div class="thumb-title"><h5><span>title here</span></h5></div>
-	          	</a>
-	          </div>
-	           <div class="item">
-	          	<a  class="venobox" data-gall="thumb-gallery"  href="http://placehold.it/700x700">
-	          		<img data-no-retina alt="odin" title="odin" class="img-responsive" src="http://placehold.it/700x700"/>
-	          		<div class="thumb-title"><h5><span>title here</span></h5></div>
-	          	</a>
-	          </div>
-
-        	</div>
-        	<!-- thumb-carousel : ends -->
-
-        	</section>
-	<!-- inner-section : ends -->
+			<!-- item:ends -->
 <br><br>
 						<div class="welcome-button" align="center">
 							<a class="btn btn-odin btn-odin-color" href="post00.html">UNDERSTANDING OUR CITY BY 3-1-1 DATA</a>
@@ -164,20 +122,12 @@
 
 
 	</section>
-	<!-- inner-section : ends-->
+
+	
+</div>
 
 
-
-
-
-
-
-<!-- page-section : starts -->
-<footer id="mastfoot" class="mastfoot white-bg">
-
-
-</footer>
-
+</section>
 
 
 </section>
@@ -187,10 +137,10 @@
 
 <!-- Core JS Libraries -->
 <script src="javascripts/libs/common.js"></script>
-<script src="bootstrap/js/bootstrap.js" ></script>
-<!-- JS Custom Codes -->
-<script src="javascripts/custom/custom-init.js" ></script>
-<script src="javascripts/custom/main.js" ></script>
+<script src="bootstrap/js/bootstrap.js" ></script> 
+<!-- JS Custom Codes --> 
+<script src="javascripts/custom/custom-init.js" ></script> 
+<script src="javascripts/custom/main.js" ></script> 
 
 
 </body>
