--- a/post00.html
+++ b/post00.html
@@ -125,7 +125,7 @@
 
 <div id="chartContainer" align="center">
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="dimple.v2.3.0.min.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("#chartContainer", 1000, 600);
     d3.csv("example_data1.csv", function (data) {
