--- a/post02.html
+++ b/post02.html
@@ -124,8 +124,8 @@
 	<section id="project-page-carousel-wrap" class="inner-section project-page-carousel-wrap white-bg">
 
 <div id="chartContainer" align="center">
-  <script src="http://d3js.org/d3.v4.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="./dimple.v2.3.0.js"></script>
   <script type="text/javascript">
     var svg11 = dimple.newSvg("#chartContainer", 900, 700);
     d3.csv("pleasework.csv", function (data) {
