--- a/post03.html
+++ b/post03.html
@@ -127,8 +127,8 @@
 	<section id="project-page-carousel-wrap" class="inner-section project-page-carousel-wrap white-bg">
 
 <div id="chartContainer" align="center">
-<script src="http://d3js.org/d3.v4.min.js"></script>
-<script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="./dimple.v2.3.0.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("#chartContainer", 1000, 600);
     d3.csv("donut chart.csv", function (data) {
