--- a/post06.html
+++ b/post06.html
@@ -125,8 +125,8 @@
 
 
 <div id="chartContainer" align="center">
-  <script src="http://d3js.org/d3.v4.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="./dimple.v2.3.0.js"></script>
   <script type="text/javascript">
     var svg2 = dimple.newSvg("#chartContainer", 1000, 600);
     d3.csv("month+year.csv", function (data) {
