--- a/post02.html
+++ b/post02.html
@@ -166,6 +166,14 @@
 					<article class="col-md-8 col-md-offset-2 main-caps text-center">
 						<div class="liner color-bg"></div>
 						<div class="welcome-button">
+							<a class="btn btn-odin btn-odin-color" href="http://www.neighborhoodx.com/public/boston/houses-comparing-average-sale-price-to-average-price-per-square-foot-june-2016?value=price">Boston Housing Prices</a>
+						</div>
+
+					</article>
+					<br>
+					<article class="col-md-8 col-md-offset-2 main-caps text-center">
+						<div class="liner color-bg"></div>
+						<div class="welcome-button">
 							<a class="btn btn-odin btn-odin-color" href="post03.html">></a>
 						</div>
 
